# kestrel

./: .gitmodules  Cargo.toml  LICENSE  rust-toolchain.toml
binaryen/: Cargo.toml  build.rs
binaryen-sys/: Cargo.toml  build.rs  wrapper.h
binaryen-sys/src/: lib.rs
binaryen-sys/tests/: main.rs
binaryen/examples/: print.rs
binaryen/src/: error.rs  expression.rs  external.rs  features.rs  function.rs  global.rs  lib.rs  literal.rs  module.rs  op.rs  settings.rs  tag.rs  type.rs
binaryen/src/expression/: raw.rs
binaryen/tests/: expression.rs  tag.rs
syntax/: Cargo.toml
