[package]
name = "binaryen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binaryen-sys = { path = "../binaryen-sys" }
paste = "1"
bitflags = "1"
simdutf8 = { version = "0.1.4", features = ["aarch64_neon"] }
thiserror = "1"
beef = { version = "0.5.2", features = ["const_fn"] }
tinyvec = "1.6.0"
once_cell = "1"

[dev-dependencies]
cstr = "0.2.10"

[build-dependencies]
binaryen-sys = { path = "../binaryen-sys" }